--- a/_episodes_rmd/02-Exploring_Data_in_Synapse.Rmd
+++ b/_episodes_rmd/02-Exploring_Data_in_Synapse.Rmd
@@ -36,7 +36,7 @@ as the tidyverse family of packages
 install.packages("synapser", repos = c("http://ran.synapse.org", "http://cran.fhcrc.org"))
 
 # install tidyverse if you don't already have it
-install.packages("tidyverse")
+install.packages("tidyverse", repos = "https://cloud.r-project.org")
 ```
 Load libraries
 ```{r}
